cannot create same friendship 2x

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
           <%= link_to "Sign out", destroy_user_session_path, method: :delete %> |
 
           <%= link_to "Your home page", user_path(current_user) %> |
-          <%= link_to "Send letter", user_path(current_user) %></p>
+          <%= link_to "Send letter", user_path(current_user) %> |
+          <%= link_to "List Users", users_path %></p>
 
         <% else %>
           <%= link_to "Sign up", new_user_path %> |
