--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,7 +26,7 @@
 </div><br>
 </div>
 <div id="two">
-<div class="col-md-8">
+<div class="col-md-4">
   <strong>Your messages:</strong>
   <% @messages.each do |message| %>
     
@@ -36,3 +36,18 @@
 
 </div> 
 </div>
+
+<div id="three">
+<div class="col-md-4">
+  <strong>Your friends' messages:</strong>
+  <% @friends_messages.each do |message| %>
+    
+        <li><%= message.content %> -FROM: <%= message.user.email %></li>
+
+    <% end %>
+
+</div> 
+</div>
+
+
+
