--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
       <li><%=h user.user_email %></li>
     <% end %>
   </ul><br>
-  <%= link_to "Find users to friend", users_path %>
+  <%= link_to "Find users to friend" %>
 
 </div><br>
 </div>
