--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @message, :url => user_messages_path, :html => { :multipart => true } do |f| %>
+<%= form_for [@user, @message] do |f| %>
   <div class="form-group">
     <%= f.label :content %>
     <%= f.text_area :content %>
